# Polaris

./: .gitignore  README.md  commitlint.config.mjs  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.polaris/: git-panel-changelog.md  todos.json
.polaris/requirements/: requirements.json
docs/: 20260329-mcp-storage-path-pitfall.md  mcp-migration-practice.md
docs-site/: faq.md  index.md  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/guide/: ai-chat.md  developer.md  file-explorer.md  getting-started.md  git.md  integration.md  overview.md  prompt-snippet.md  quick-tour.md  requirement.md  scheduler.md  settings.md  terminal.md  translate.md  workspace.md
docs/claude-cli-analysis/: 01_global_options_analysis.md  02_commands_analysis.md  03_visualization_design.md  README.md
docs/claude-cli-visualization/: README.md  implementation-guide.md  implementation-report.md  options-detail.md  prototypes.md  source-verification.md
docs/plan/: history-query-optimization.md
prototypes/: f95c5db6-8e5b-43e1-8fc0-535395119392.html
scripts/: benchmark-markdown.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/ai/: event_parser.rs  history.rs  history_claude.rs  mod.rs  session.rs  traits.rs  types.rs
src-tauri/src/ai/engine/: claude.rs  codex.rs  iflow.rs  mod.rs  openai.rs
src-tauri/src/ai/tools/: bash_validation.rs  mod.rs
src-tauri/src/commands/: auto_mode.rs  chat.rs  deepseek_tools.rs  git.rs  integration.rs  logging.rs  mcp_manager.rs  mod.rs  openai_proxy.rs  prompt_snippet.rs  scheduler.rs  terminal.rs  webview.rs  window.rs
src-tauri/src/integrations/: commands.rs  manager.rs  mod.rs
src-tauri/src/integrations/common/: conversation_store.rs  mod.rs  retry.rs  session.rs
src-tauri/src/integrations/qqbot/: adapter.rs
src-tauri/src/models/: ai_event.rs  auto_mode.rs  config.rs  git.rs  iflow_events.rs  mod.rs  prompt_snippet.rs  scheduler.rs
src-tauri/src/services/: codex_service.rs  config_store.rs  git.rs  iflow_service.rs  mcp_config_service.rs  mcp_diagnostics_service.rs  mcp_manager_service.rs  mod.rs  openai_proxy.rs  openai_service.rs  prompt_snippet_service.rs  scheduler_daemon.rs  scheduler_mcp_server.rs  unified_scheduler_repository.rs
src-tauri/src/services/git/: diff.rs  status.rs  tag.rs  utils.rs
src-tauri/src/services/lsp/: installer.rs  manager.rs
src-tauri/src/services/scheduler/: dispatcher.rs  local_file_storage.rs  mod.rs  protocol_task.rs  protocol_template.rs  store.rs
src-tauri/src/utils/: mod.rs
src/ai-runtime/: engine-registry.ts  event-bus.test.ts  event.test.ts  index.ts  tool-registry.ts
src/config/: engineCommands.ts
src/core/: engine-bootstrap.ts  tool-bootstrap.ts
src/hooks/: useAppEvents.ts  useAppInit.ts  useChat.ts  useDebounce.ts  useError.test.ts  useFileSearch.ts  useSpeechRecognition.ts  useWorkspaceSync.ts
src/i18n/: index.ts
src/services/: aiRuntimeService.ts  chatExport.test.ts  claudeCodeHistoryService.test.ts  (+21 more)
(+294 files in other folders)
