[package]
name = "polaris"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polaris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
pathdiff = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1"
git2 = "0.18"
similar = "2.4"
bitflags = "2.4"
walkdir = "2"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
md5 = "0.7"
